--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7"
+    "netlify-cli": "^17.37.2",
+    "netlify-lambda": "^2.0.16",
+    "nodemon": "^3.1.7",
+    "serverless-http": "^3.2.0"
   }
 }
