--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
+# DATABASE_URL = "mongodb://127.0.0.1:27017/"
 PORT = 8000
 DATABASE_URL = "mongodb+srv://zeeshanzahoor409:zeeshanzahoor409@e-comm-cluster.ukbia.mongodb.net/"
-# DATABASE_URL = "mongodb://127.0.0.1:27017/"
-JWT_SECRET_KEY = "dhsjf3423jhsdf3423df"
+JWT_SECRET_KEY = "dhsjf3423jhsdf3423df",
+ENV=DEV
