--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 PORT = 8000
 ENV=DEV
 DATABASE_URL = "mongodb+srv://zeeshanzahoor409:zeeshanzahoor409@e-comm-cluster.ukbia.mongodb.net/"
-JWT_SECRET_KEY = "dhsjf3423jhsdf3423df",
+JWT_SECRET_KEY = "dhsjf3423jhsdf3423df"
